[gd_scene load_steps=23 format=3 uid="uid://doswcbmdql5cy"]

[ext_resource type="PackedScene" uid="uid://ccy07coqyd1kq" path="res://DROW.tscn" id="1_oaob3"]
[ext_resource type="Script" path="res://demo/subscenes/mash_wheel.gd" id="1_vq7gi"]
[ext_resource type="Script" path="res://wheel-components/wheel_slice_data.gd" id="2_2rvlo"]
[ext_resource type="Script" path="res://wheel-components/wheel_segment_data.gd" id="3_e34f3"]

[sub_resource type="Resource" id="Resource_ectq5"]
script = ExtResource("2_2rvlo")
color = Color(0, 0.8, 1, 1)
value = 0

[sub_resource type="Resource" id="Resource_4ru5p"]
script = ExtResource("2_2rvlo")
color = Color(0, 0.8, 1, 1)
value = 0

[sub_resource type="Resource" id="Resource_snsnu"]
script = ExtResource("2_2rvlo")
color = Color(0, 0.8, 1, 1)
value = 0

[sub_resource type="Resource" id="Resource_b7mc2"]
script = ExtResource("2_2rvlo")
color = Color(0, 0.8, 1, 1)
value = 0

[sub_resource type="Resource" id="Resource_8oq8k"]
script = ExtResource("2_2rvlo")
color = Color(0, 0.8, 1, 1)
value = 0

[sub_resource type="Resource" id="Resource_hpw1l"]
script = ExtResource("2_2rvlo")
color = Color(0, 0.8, 1, 1)
value = 0

[sub_resource type="Resource" id="Resource_6v2aj"]
script = ExtResource("3_e34f3")
color = Color(1, 1, 1, 1)
value = 1
selectable = true

[sub_resource type="Resource" id="Resource_m66c6"]
script = ExtResource("3_e34f3")
color = Color(1, 1, 1, 1)
value = 1
selectable = true

[sub_resource type="Resource" id="Resource_un1ct"]
script = ExtResource("3_e34f3")
color = Color(1, 1, 1, 1)
value = 1
selectable = true

[sub_resource type="Resource" id="Resource_51hax"]
script = ExtResource("3_e34f3")
color = Color(1, 1, 1, 1)
value = 1
selectable = true

[sub_resource type="Resource" id="Resource_yu1ip"]
script = ExtResource("3_e34f3")
color = Color(1, 1, 1, 1)
value = 1
selectable = true

[sub_resource type="Resource" id="Resource_svsc0"]
script = ExtResource("3_e34f3")
color = Color(1, 1, 1, 1)
value = 1
selectable = true

[sub_resource type="Gradient" id="Gradient_tpi7f"]
colors = PackedColorArray(0.481789, 0.481789, 0.481789, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yhodk"]
gradient = SubResource("Gradient_tpi7f")
width = 32
height = 32
fill_to = Vector2(1, 1)

[sub_resource type="Gradient" id="Gradient_20qbl"]
offsets = PackedFloat32Array(0, 0.167598)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_0ciyj"]
gradient = SubResource("Gradient_20qbl")
width = 50
height = 50

[sub_resource type="LabelSettings" id="LabelSettings_jndtq"]
font_size = 144
font_color = Color(0.57, 1, 0.613, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(10, 10)

[sub_resource type="LabelSettings" id="LabelSettings_tksi2"]
font_size = 144
font_color = Color(1, 0.57, 0.57, 1)
shadow_size = 20
shadow_color = Color(0, 0, 0, 1)
shadow_offset = Vector2(10, 10)

[node name="MashWheel" type="CenterContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vq7gi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="DROW" parent="VBoxContainer" instance=ExtResource("1_oaob3")]
unique_name_in_owner = true
custom_minimum_size = Vector2(520, 520)
layout_mode = 2
selector_active = false
disable_selected_segments = false
rotate_on_selection = false
overlay_color = Color(0.66, 0.790333, 1, 1)
outer_border_thickness = 20.0
inner_border_thickness = 10.0
selector_color = Color(1, 1, 1, 1)
cover_color = Color(1, 1, 1, 0.568627)
max_multiplier_value = 5
multiplier_slice_data = Array[ExtResource("2_2rvlo")]([SubResource("Resource_ectq5"), SubResource("Resource_4ru5p"), SubResource("Resource_snsnu"), SubResource("Resource_b7mc2"), SubResource("Resource_8oq8k"), SubResource("Resource_hpw1l")])
value_segment_data = Array[ExtResource("3_e34f3")]([SubResource("Resource_6v2aj"), SubResource("Resource_m66c6"), SubResource("Resource_un1ct"), SubResource("Resource_51hax"), SubResource("Resource_yu1ip"), SubResource("Resource_svsc0")])

[node name="TimerContainer" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(550, 50)
layout_mode = 2
theme_override_constants/separation = 0

[node name="TimerBar" type="TextureRect" parent="VBoxContainer/TimerContainer"]
unique_name_in_owner = true
self_modulate = Color(0.4, 1, 0.89, 1)
custom_minimum_size = Vector2(500, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = SubResource("GradientTexture2D_yhodk")
expand_mode = 1

[node name="TimerCap" type="TextureRect" parent="VBoxContainer/TimerContainer"]
self_modulate = Color(1, 0.53, 0.53, 1)
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = SubResource("GradientTexture2D_0ciyj")

[node name="WinLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "FAST AS HECK"
label_settings = SubResource("LabelSettings_jndtq")
horizontal_alignment = 1

[node name="LoseLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "MISMASHED"
label_settings = SubResource("LabelSettings_tksi2")
horizontal_alignment = 1

[connection signal="new_segment_chosen" from="VBoxContainer/DROW" to="." method="_process_mash"]
